--- a/src/app/news-feed/news-feed.component.scss
+++ b/src/app/news-feed/news-feed.component.scss
@@ -3,6 +3,8 @@
   background-color: #2E5266;
   padding-top: 60px;
   color: #FBB64F;
+  height: 100%;
+  min-height: calc(100vh - 57px);
 }
 .news-feed-container {
   max-width: 800px;
