--- a/src/app/reporting/reporting.component.scss
+++ b/src/app/reporting/reporting.component.scss
@@ -2,4 +2,5 @@
     background-color: #2E5266;
     padding-top: 60px;
     color: #FBB64F;
+    min-height: calc(100vh - 57px);
 }
