--- a/src/app/resources/resources.component.scss
+++ b/src/app/resources/resources.component.scss
@@ -10,6 +10,7 @@ $gray2: #9FB1BC;
     padding-top: 60px;
     color: $yellow;
     min-height: 100vh;
+    min-height: calc(100vh - 57px);
 
     a{
         color: $red;
